--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -47,9 +47,14 @@
   width: 900px;
   height: 600px;
   object-fit: cover;
+  border: 3px solid rgb(20, 20, 20);
 }
 
 span {
-  font-size: 2rem;
+  font-size: 1.4rem;
   color: rgb(20, 20, 20);
+}
+
+.planta-title {
+  color: brown;
 }
