--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -20,23 +20,25 @@ header {
   align-items: center;
   justify-content: space-between;
   height: 140px;
+  width: 100%;
   padding: 0 2rem;
   background-color: var(--mainColor);
   color: var(--textColor);
-  /* z-index: 200; */
-  /* grid-area: header; */
+  z-index: 999;
+  
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav a{
-  margin: 0 2rem;
+  margin: 0 .7rem;
   color: var(--textColor);
   text-decoration: none;
-
-
-  /* flex: 100%;
-
-  align-items: center;
-  justify-content: flex-end; */
+  font-size: .8vw;
 }
 
 nav s:hover{
@@ -56,20 +58,7 @@ header .nav-btn{
   font-size: 1.8rem;
 
 }
-/* .derecha{
-  flex: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-} */
 
-/* .izquierda{
-  flex: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  max-height: 80px;
-} */
 
 @media only screen and (max-width: 1024px){
   header .nav-btn{
@@ -94,10 +83,7 @@ header .nav-btn{
   }
   header .responsive_nav{
     transform: none;
-    /* flex: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end; */
+
   }
 
   nav .nav-close-btn{
@@ -109,31 +95,3 @@ header .nav-btn{
     font-size: 1.5rem;
   }
 }
-
-
-
-
-/* body{
-  margin: 0;
-  padding: 0;
-}
-
-.Navbar {
-  background-color: blue;
-  width: 100%;
-  height: 80px;
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  
-}
-
-.derecha{
-  flex: 50%;
-}
-
-.izquierda{
-  flex: 50%;
-}
-.derecha .links{
-  max-height: 80px;
-} */
